fix: layout section gap

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -73,4 +73,9 @@
   body {
     @apply bg-background text-foreground;
   }
+  
+}
+
+.main-container {
+  gap: 120px;
 }
